# pyplane

./: .tasks  README.md  main.py  pyproject.toml
src/pyplane/: __init__.py  __main__.py  core.py
src/pyplane/config/: __init__.py  config.toml
src/pyplane/images/: __init__.py
src/pyplane/model/: __init__.py  bullet.py  plane.py
